feat: Partial creating html-structure
Was created main sections, header, section beyond the header, section with articles, aside, section beyond the articles, footer.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <title>html-css-training-final-liaksej</title>
 </head>
-<body>
-    <h1>Привет, мир!</h1>
+<body class="page">
+    <header class="header">
+        <a class="logo-link" href="">
+            <img class="logo" src="" alt="">
+        </a>
+        <nav class="menu">
+            <a href="" class="menu__item">ГЛАВНАЯ</a>
+            <a href="" class="menu__item">ПОСТЫ</a>
+            <a href="" class="menu__item">СТАТЬИ</a>
+            <a href="" class="menu__item">ТЕГИ</a>
+            <a href="" class="menu__item">ТЕМЫ</a>
+            <a href="" class="menu__item">КОНТАКТЫ</a>
+        </nav>
+        <h1 class="name">БЛОГ О ТВОРЧЕСТВЕ, СПОРТЕ, И ОБРАЗЕ ЖИЗНИ</h1>
+    </header>
+    <main class="main">
+        <section class="section">
+            <header class="section__header">
+                <h2 class="section__heading">СЕЙЧАС В ТРЕНДЕ</h2>
+            </header>
+            <div class="content-container">
+                <a class="article-link">
+                    <div class="article__interior-block">
+                        <h3 class="article__name">СЕЙЧАС В ТРЕНДЕ: САД НА ПОДОКОННИКЕ</h3>
+                        <span class="article__tag">LIFESTYLE</span>
+                        <span class="article__tag">INTERIOR</span>
+                    </div>
+                </a>
+                <a class="article-link">
+                    <div class="article__interior-block">
+                        <h3 class="article__name">СЫРЫ НА КРАСИВЫХ КАРТИНКАХ ИЗ ИНТЕРНЕТА: КАКИЕ ОНИ НА ВКУС?</h3>
+                        <span class="article__tag">FOOD</span>
+                    </div>
+                </a>
+                <a class="article-link">
+                    <div class="article__interior-block">
+                        <h3 class="article__name">СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</h3>
+                        <span class="article__tag">LIFESTYLE</span>
+                        <span class="article__tag">TRAVEL</span>
+                    </div>
+                </a>
+                <a class="article-link">
+                    <div class="article__interior-block">
+                        <h3 class="article__name">СЕЙЧАС В ТРЕНДЕ: СКОЛЬКО ВИТАМИНА C В ЛИМОНАХ?</h3>
+                        <span class="article__tag">FOOD</span>
+                        <span class="article__tag">HEALTH</span>
+                    </div>
+                </a>
+            </div>
+        </section>
+        <section class="content">
+            <article class="snippet">
+                <header class="snippet__header">
+                    <div class="snippet__tags">
+                        <span class="snippet__tag">TRAVEL</span>
+                        <span class="snippet__tag">HEALTH</span>
+                    </div>
+                    <h3 class="snippet__heading">10 МЕСТ, РАДИ КОТОРЫХ СТОИТ ПРОСНУТЬСЯ НА РАССВЕТЕ</h3>
+                    <div class="snippet__author-data">
+                        <data class="snippet__data" value="">10 июня 2019</data>
+                        <span class="snippet__author">Неизвестный автор</span>
+                    </div>
+                </header>
+                <p class="snippet__text">Итак, вы в Питере. Раннее утро. Лед с рек и каналов уже сошел,
+                    запущены фонтаны города... Музеи еще закрыты. Что посмотреть?</p>
+                <img class="snippet__img" src="" alt="">
+            </article>
+            <article class="snippet">
+                <header class="snippet__header">
+                    <div class="snippet__tags">
+                        <span class="snippet__tag">HEALTH</span>
+                        <span class="snippet__tag">LIFESTYLE</span>
+                    </div>
+                    <h3 class="snippet__heading">ЙОГА ДЛЯ НАЧИНАЮШИХ В ДОМАШНИХ УСЛОВИЯХ</h3>
+                    <div class="snippet__author-data">
+                        <data class="snippet__data" value="">10 июня 2019</data>
+                        <span class="snippet__author">Неизвестный автор</span>
+                    </div>
+                </header>
+                <p class="snippet__text">Расскажем, какие упражнения выбрать и как сделать коврик для
+                    занятия йогой из того, что можно найти в шкафу.</p>
+                <img class="snippet__img" src="" alt="">
+            </article>
+            <article class="snippet">
+                <header class="snippet__header">
+                    <div class="snippet__tags">
+                        <span class="snippet__tag">MUSIC</span>
+                    </div>
+                    <h3 class="snippet__heading">ЛУЧШИЕ МУЗЫКАЛЬНЫЕ ФЕСТИВАЛИ ЭТОГО ЛЕТА</h3>
+                    <div class="snippet__author-data">
+                        <data class="snippet__data" value="">10 июня 2019</data>
+                        <span class="snippet__author">Неизвестный автор</span>
+                    </div>
+                </header>
+                <p class="snippet__text">Лето на носу, а с ним и музыкальные фестивали. На каком же из них
+                    вы разобьете свою палатку?</p>
+                <p class="snippet__text">Мы составили список лучших летних фестивалей по всему миру.</p>
+                <img class="snippet__img" src="" alt="">
+            </article>
+            <article class="snippet">
+                <header class="snippet__header">
+                    <div class="snippet__tags">
+                        <span class="snippet__tag">LIFESTYLE</span>
+                        <span class="snippet__tag">FOOD</span>
+                    </div>
+                    <h3 class="snippet__heading">НАУКОЁМКИЙ ПОДХОД К КУЛИНАРИИ</h3>
+                    <div class="snippet__author-data">
+                        <data class="snippet__data" value="">10 июня 2019</data>
+                        <span class="snippet__author">Неизвестный автор</span>
+                    </div>
+                </header>
+                <p class="snippet__text">Узнаем основы проектирования новых пищевых и около-пищевых опытов,
+                    вскроем физику, химию и микробиологию еды.</p>
+                <img class="snippet__img" src="" alt="">
+            </article>
+            <article class="snippet">
+                <header class="snippet__header">
+                    <div class="snippet__tags">
+                        <span class="snippet__tag">LIFESTYLE</span>
+                        <span class="snippet__tag">INTERIOR</span>
+                        <span class="snippet__tag">ART</span>
+                    </div>
+                    <h3 class="snippet__heading">ДЕЛАЕМ МОДНЫЕ ПРИНТЫ НА ПОДУШКАХ ДЛЯ ИНТЕРЬЕРА</h3>
+                    <div class="snippet__author-data">
+                        <data class="snippet__data" value="">10 июня 2019</data>
+                        <span class="snippet__author">Неизвестный автор</span>
+                    </div>
+                </header>
+                <p class="snippet__text">Подушки для дивана целесообразнее заказать в съемных чехлах
+                    на молнии, если потребуется чистка подушек, проще снять чехлы, чем везти подушку в
+                    химчистку.</p>
+                <img class="snippet__img" src="" alt="">
+            </article>
+        </section>
+        <aside>
+            <section class="section">
+                <h2 class="section-heading"></h2>
+            </section>
+            <section class="section"></section>
+            <section class="section">
+                <h2 class="section-heading"></h2>
+            </section>
+            <section class="section">
+                <h2 class="section-heading"></h2>
+            </section>
+            <section class="section">
+                <h2 class="section-heading"></h2>
+            </section>
+        </aside>
+    <section class="section">
+        <h2 class="section-heading"></h2>
+        <article class="article-card"></article>
+        <article class="article-card"></article>
+        <article class="article-card"></article>
+    </section>
+    </main>
+    <footer class="footer">
+        <section></section>
+        <section></section>
+    </footer>
 </body>
 </html>
