feat: Full creating html-structure
Additionally, to last commit was created all elements in aside, all elements in section shop and all elements in bottom.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="page">
     <header class="header">
         <a class="logo-link" href="">
-            <img class="logo" src="" alt="">
+            <img class="logo" src="" alt="Логотип">
         </a>
         <nav class="menu">
             <a href="" class="menu__item">ГЛАВНАЯ</a>
@@ -25,7 +25,7 @@
             <header class="section__header">
                 <h2 class="section__heading">СЕЙЧАС В ТРЕНДЕ</h2>
             </header>
-            <div class="content-container">
+            <div class="content-container section__content-container">
                 <a class="article-link">
                     <div class="article__interior-block">
                         <h3 class="article__name">СЕЙЧАС В ТРЕНДЕ: САД НА ПОДОКОННИКЕ</h3>
@@ -70,7 +70,7 @@
                 </header>
                 <p class="snippet__text">Итак, вы в Питере. Раннее утро. Лед с рек и каналов уже сошел,
                     запущены фонтаны города... Музеи еще закрыты. Что посмотреть?</p>
-                <img class="snippet__img" src="" alt="">
+                <img class="snippet__img" src="" alt="Человек идет по пляжу">
             </article>
             <article class="snippet">
                 <header class="snippet__header">
@@ -86,7 +86,7 @@
                 </header>
                 <p class="snippet__text">Расскажем, какие упражнения выбрать и как сделать коврик для
                     занятия йогой из того, что можно найти в шкафу.</p>
-                <img class="snippet__img" src="" alt="">
+                <img class="snippet__img" src="" alt="Девушка занимается йогой на пряже">
             </article>
             <article class="snippet">
                 <header class="snippet__header">
@@ -102,7 +102,7 @@
                 <p class="snippet__text">Лето на носу, а с ним и музыкальные фестивали. На каком же из них
                     вы разобьете свою палатку?</p>
                 <p class="snippet__text">Мы составили список лучших летних фестивалей по всему миру.</p>
-                <img class="snippet__img" src="" alt="">
+                <img class="snippet__img" src="" alt="Девушка сидит на шее среди толпы на музыкальном фестивале">
             </article>
             <article class="snippet">
                 <header class="snippet__header">
@@ -118,7 +118,7 @@
                 </header>
                 <p class="snippet__text">Узнаем основы проектирования новых пищевых и около-пищевых опытов,
                     вскроем физику, химию и микробиологию еды.</p>
-                <img class="snippet__img" src="" alt="">
+                <img class="snippet__img" src="" alt="Накрытый обеденный стол">
             </article>
             <article class="snippet">
                 <header class="snippet__header">
@@ -136,34 +136,195 @@
                 <p class="snippet__text">Подушки для дивана целесообразнее заказать в съемных чехлах
                     на молнии, если потребуется чистка подушек, проще снять чехлы, чем везти подушку в
                     химчистку.</p>
-                <img class="snippet__img" src="" alt="">
+                <img class="snippet__img" src="" alt="Розовая подушка со стрелкой вниз и надписью Hang out spot лежит на мягком белом стуле">
             </article>
         </section>
         <aside>
             <section class="section">
-                <h2 class="section-heading"></h2>
+                <header class="aside__header">
+                    <h2 class="aside__heading">НОВЫЕ ПОСТЫ</h2>
+                </header>
+                <div class="content-container aside__content-container">
+                    <a class="article-link">
+                        <img src="" alt="Человек идет по пляжу">
+                        <data class="article__data" value="">14 июня 2019</data>
+                        <h3 class="article__name">10 МЕСТ, РАДИ КОТОРЫХ СТОИТ ПРОСНУТЬСЯ</h3>
+                    </a>
+                    <a class="article-link">
+                        <img src="" alt="Девушка занимается йогой на пряже">
+                        <data class="article__data" value="">14 июня 2019</data>
+                        <h3 class="article__name">ЙОГА ДЛЯ ДОМАШНИХ</h3>
+                    </a>
+                    <a class="article-link">
+                        <img src="" alt="Интерье с мягким креслом">
+                        <data class="article__data" value="">14 июня 2019</data>
+                        <h3 class="article__name">КАК МЫ ПРЕВРАТИЛИ КЛАССНОЕ МЕСТО В БАЛКОН</h3>
+                    </a>
+                    <a class="article-link">
+                        <img src="" alt="Накрытый обеденный стол">
+                        <data class="article__data" value="">14 июня 2019</data>
+                        <h3 class="article__name">КУЛИНАРНЫЙ ПОДХОД К НАУКЕ</h3>
+                    </a>
+                    <a class="article-link">
+                        <img src="" alt="Три девушки стоят спиной  с распущенными волосами"
+                        <data class="article__data" value="">14 июня 2019</data>
+                        <h3 class="article__name">ЛУЧШИЕ ПРИЧЕСКИ ДЛЯ РАСПУЩЕННЫХ ВОЛОС</h3>
+                    </a>
+                </div>
             </section>
-            <section class="section"></section>
             <section class="section">
-                <h2 class="section-heading"></h2>
+                <form class="search-form">
+                    <label class="search-form__label">
+                        <input>
+                    </label>
+                    <button class="search-form__button search-form__button_disable">
+                        <img class="search-form__img" src="/svg/search.svg" alt="Кнопка поиска">
+                    </button>
+                </form>
             </section>
             <section class="section">
-                <h2 class="section-heading"></h2>
+                <header class="aside__header">
+                    <h2 class="aside__heading">РАССЫЛКА</h2>
+                </header>
+                <form class="subscribe-form">
+                    <label class="subscribe-form__label">
+                        <input class="subscribe-form__input">
+                    </label>
+                    <button class="subscribe-form__button subscribe-form__button_disabled">ПОДПИСАТЬСЯ</button>
+                </form>
             </section>
             <section class="section">
-                <h2 class="section-heading"></h2>
+                <header class="aside__header">
+                    <h2 class="aside__heading">ТЕГИ</h2>
+                </header>
+                <div class="tag-container">
+                    <a href="#" class="tag tag-container__item">FASHION</a>
+                    <a href="#" class="tag tag-container__item">MUSIC</a>
+                    <a href="#" class="tag tag-container__item">LIFESTYLE</a>
+                    <a href="#" class="tag tag-container__item">ART</a>
+                    <a href="#" class="tag tag-container__item">INTERIOR</a>
+                    <a href="#" class="tag tag-container__item">TRAVEL</a>
+                    <a href="#" class="tag tag-container__item">FOOD</a>
+                    <a href="#" class="tag tag-container__item">HEALTH</a>
+                </div>
+            </section>
+            <section class="section">
+                <header class="header aside__header">
+                    <h2 class="aside__heading">ТЕМЫ</h2>
+                </header>
+                <div class="topics-container">
+                    <div class="topic-container__item">
+                        <a href="" class="topic-container__link">
+                            <h3 class="topic-container__heading">
+                                <span class="topic-container__name">Красота</span>
+                                <span class="topic-container__posts-quantity">12</span>
+                            </h3>
+                        </a>
+                        <div class="topic-container__separator"></div>
+                    </div>
+                    <div class="topic-container__item">
+                        <a href="" class="topic-container__link">
+                            <h3 class="topic-container__heading">
+                                <span class="topic-container__name">Здоровье</span>
+                                <span class="topic-container__posts-quantity">4</span>
+                            </h3>
+                        </a>
+                        <div class="topic-container__separator"></div>
+                    </div>
+                    <div class="topic-container__item">
+                        <a href="" class="topic-container__link">
+                            <h3 class="topic-container__heading">
+                                <span class="topic-container__name">Образ жизни</span>
+                                <span class="topic-container__posts-quantity">145</span>
+                            </h3>
+                        </a>
+                        <div class="topic-container__separator"></div>
+                    </div>
+                    <div class="topic-container__item">
+                        <a href="" class="topic-container__link">
+                            <h3 class="topic-container__heading">
+                                <span class="topic-container__name">Музыка</span>
+                                <span class="topic-container__posts-quantity">28</span>
+                            </h3>
+                        </a>
+                        <div class="topic-container__separator"></div>
+                    </div>
+                    <div class="topic-container__item">
+                        <a href="" class="topic-container__link">
+                            <h3 class="topic-container__heading">
+                                <span class="topic-container__name">Спорт</span>
+                                <span class="topic-container__posts-quantity">62</span>
+                            </h3>
+                        </a>
+                        <div class="topic-container__separator"></div>
+                    </div>
+                    <div class="topic-container__item">
+                        <a href="" class="topic-container__link">
+                            <h3 class="topic-container__heading">
+                                <span class="topic-container__name">Йога</span>
+                                <span class="topic-container__posts-quantity">8</span>
+                            </h3>
+                        </a>
+                        <div class="topic-container__separator"></div>
+                    </div>
+                </div>
             </section>
         </aside>
     <section class="section">
-        <h2 class="section-heading"></h2>
-        <article class="article-card"></article>
-        <article class="article-card"></article>
-        <article class="article-card"></article>
+        <header class="section__header">
+            <h2 class="section__heading">НАШИ ИЗДЕЛИЯ</h2>
+        </header>
+        <div class="content-container shop">
+            <div class="shop__item">
+                <img class="shop__image" src="" alt="Подушка на диван">
+                <div class="shop__card">
+                    <h3 class="shop__name">ПОДУШКА НА ДИВАН</h3>
+                    <p class="shop__text">Набор из двух подушек с модными принтами. Видео о создании <a class="shop__additional-link" href="">здесь</a>.</p>
+                    <div class="shop__price">
+                        <span class="shop__old-price">1000 &#8381;</span>
+                        <span class="shop__price">800 &#8381;</span>
+                    </div>
+                    <button class="shop__button shop__button_disabled">В МАГАЗИН</button>
+                </div>
+            </div>
+            <div class="shop__item">
+                <img class="shop__image" src="" alt="Кукла &laquo;Зайчик&raquo;">
+                <div class="shop__card">
+                    <h3 class="shop__name">КУКЛА &laquo;ЗАЙЧИК&raquo;</h3>
+                    <p class="shop__text">Интерьерная рукодельная кукла &laquo;Зайчик&raquo, созданию которой посвящена <a class="shop__additional-link" href="#">весенняя серия постов</a> в блоге и несколько подкастов.</p>
+                    <div class="shop__price">
+                        <span class="shop__old-price"></span>
+                        <span class="shop__price">3500 &#8381;</span>
+                    </div>
+                    <button class="shop__button shop__button_disabled">В МАГАЗИН</button>
+                </div>
+            </div>
+            <div class="shop__item">
+                <img class="shop__image" src="" alt="Шестиугольная рамка и ваза с цветами на столе">
+                <div class="shop__card">
+                        <h3 class="shop__name">ШЕСТИУГОЛЬНАЯ РАМКА</h3>
+                    <p class="shop__text">Необычная рамка для украшения дома из видео <a class="shop__additional-link" href="#">&laquo;Как сделать рамку из подручных средств за 30 минут&raquo;</a></p>
+                    <div class="shop__price">
+                        <span class="shop__old-price">500 &#8381;</span>
+                        <span class="shop__price">400 &#8381;</span>
+                    </div>
+                    <button class="shop__button shop__button_disabled">В МАГАЗИН</button>
+                </div>
+            </div>
+        </div>
     </section>
     </main>
     <footer class="footer">
-        <section></section>
-        <section></section>
+        <section>
+            <img src="" alt="Twitter" class="social-media-logo">
+            <img src="" alt="Pinterest" class="social-media-logo">
+            <img src="" alt="Facebook" class="social-media-logo">
+            <img src="" alt="Instagram" class="social-media-logo">
+            <img src="" alt="Tilda" class="social-media-logo">
+        </section>
+        <section>
+            <span class="copyright">Copyright &#169; 2009-2019 City Blog LLC.</span>
+        </section>
     </footer>
 </body>
 </html>
