fix: Background-images5
Adjusted links to images

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                     <input class="input search-form__input" type="search" placeholder="Найти...">
                                 </label>
                                 <button class="button search-form__button search-form__button_disable button-link">
-                                    <img class="search-form__img" src="/svg/search.svg" height="19" alt="Найти">
+                                    <img class="search-form__img" src="svg/search.svg" height="19" alt="Найти">
                                 </button>
                             </form>
                         </section>
