fix: Cleanup CSS and html, aligning elements

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="link nav-links__item">
                         <a href="#" class="link nav-links__link">ТЕМЫ</a>
                     </li>
-                    <li class="linknav-links__item">
+                    <li class="link nav-links__item">
                         <a href="#" class="link nav-links__link">КОНТАКТЫ</a>
                     </li>
                 </ul>
@@ -57,7 +57,7 @@
                         <div class="link-container__interior link-container__block-2">
                             <div class="link-container__text-container">
                                 <a class="tag link-container__tag" href="#">FOOD</a>
-                                <a class="link"href="#">
+                                <a class="link" href="#">
                                     <h3 class="heading link-container__name">СЫРЫ НА КРАСИВЫХ КАРТИНКАХ ИЗ ИНТЕРНЕТА: КАКИЕ ОНИ НА ВКУС?</h3>
                                 </a>
                             </div>
@@ -84,7 +84,6 @@
                                 </a>
                             </div>
                         </div>
-                        </a>
                     </li>
                 </ul>
             </section>
@@ -157,8 +156,7 @@
                                                 <span class="snippet__author">Неизвестный автор</span>
                                             </div>
                                         </header>
-                                        <p class="p-text snippet__text">Лето на носу, а с ним и музыкальные фестивали. На каком же из них
-                                            вы разобьете свою палатку?</p>
+                                        <p class="p-text snippet__text">Лето на носу, а с ним и музыкальные фестивали. На каком же из них вы разобьете свою палатку?</p>
                                         <p class="p-text snippet__text">Мы составили список лучших летних фестивалей по всему миру.</p>
                                     </div>
                                 </article>
@@ -295,7 +293,7 @@
                             </header>
                             <div class="tag-container">
                                 <a class="tag-container__item" href="#">
-                                    <span href="#" class="tag tag-container__tag">FASHION</span>
+                                    <span class="tag tag-container__tag">FASHION</span>
                                 </a>
                                 <a class="tag-container__item" href="#">
                                     <span class="tag tag-container__tag">MUSIC</span>
@@ -425,7 +423,7 @@
         <ul class="social-media">
             <li class="social-media__item">
                 <a class="link" href="#">
-                    <img src="svg/004-twitter.svg" alt="Twitter" height="26" class="social-media__logo">
+                    <img src="svg/004-twitter.svg" alt="Twitter" height="26" class="social  -media__logo">
                 </a>
             </li>
             <li class="social-media__item">
