feat: First Draft version of all screeens

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <article class="snippet">
                                     <a class="link snippet__link" href="#">
                                         <picture>
-                                            <source media="(min-width: 641px)" srcset="images/15.jpg">
+                                            <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/15.jpg">
                                             <img class="snippet__img"
                                                     alt="Девушка занимается йогой на пляже"
                                                     src="images/last-post2.jpg">
@@ -421,7 +421,7 @@
                             <source
                                     media="(min-width: 641px)"
                                     srcset="images/shop-item-desk1.jpg">
-                            <img
+                            <img class="shop__image"
                                     alt="Подушка на диван"
                                     src="images/shop-item-mobile1.jpg">
                         </picture>
@@ -440,7 +440,7 @@
                             <source
                                     media="(min-width: 641px)"
                                     srcset="images/shop-item-desk2.jpg">
-                            <img
+                            <img class="shop__image"
                                     src="images/shop-item-mobile2.jpg"
                                     alt="Кукла &laquo;Зайчик&raquo;" style="width: auto;">
                         </picture>
@@ -459,7 +459,7 @@
                             <source
                                     media="(min-width: 641px)"
                                     srcset="images/shop-item-desk3.jpg">
-                            <img
+                            <img class="shop__image"
                                     src="images/shop-item-mobile3.jpg"
                                     alt="Кукла &laquo;Зайчик&raquo;">
                         </picture>
