feat: Laptop banner done

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>html-css-training-final-liaksej</title>
 </head>
 <body class="page">
+    <input type="checkbox" id="banner" class="banner__toggle">
     <div class="banner-section">
-        <input type="checkbox" id="banner" class="banner__toggle">
         <label for="banner" class="banner__background-close"></label>
         <div class="banner">
             <label for="banner" class="banner__close">
-                <img src="svg/form-x.svg" alt="X" width="18">
+                <img src="svg/form-x.svg" alt="X">
             </label>
             <header class="banner-header section__header">
                 <h2 class="heading banner-header__heading section-heading">ВАШ ФИДБЕК</h2>
