--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <form class="feedback-form">
                 <label class="banner__row">
                     <span class="banner__phrase">Как часто вы заходите на сайт?</span>
-                    <select class="banner__input input" required>
-                        <option selected>Почти каждый день</option>
-                        <option>Раз в неделю</option>
-                        <option>Раз в месяц</option>
-                        <option>Первый раз зашел</option>
-                        <option>Не хочу сообщать</option>
+                    <select class="banner__input input">
+                        <option value="почти каждый день" selected>Почти каждый день</option>
+                        <option value="раз в неделю">Раз в неделю</option>
+                        <option value="раз в месяц">Раз в месяц</option>
+                        <option value="первый раз зашел">Первый раз зашел</option>
+                        <option value="не хочу сообщать">Не хочу сообщать</option>
                     </select>
                 </label>
-                <label class="banner__row">
+                <div class="banner__row">
                     <span class="banner__phrase">Вы подписаны на e-mail рассылку?</span>
                     <label class="radio-item">
                         <input type="radio" class="banner__radio banner__radio_checked visually-hidden" name="answer">
@@ -38,10 +38,10 @@
                         <input type="radio" class="banner__radio banner__radio_checked visually-hidden" name="answer">
                         <span class="radio-text">Нет</span>
                     </label>
-                </label>
+                </div>
                 <label class="banner__row">
                     <span class="banner__phrase">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</span>
-                    <textarea type="" class="banner__textarea input" placeholder="Может, больше рецептов?"></textarea>
+                    <textarea class="banner__textarea input" placeholder="Может, больше рецептов?"></textarea>
                 </label>
                 <div class="banner__row">
                     <button class="button banner__button subscribe-form__button button-link" type="submit">ОТПРАВИТЬ</button>
@@ -56,7 +56,7 @@
                     <img class="logo" src="svg/noemi-logo.svg" alt="Логотип">
                 </label>
                 <nav class="main-menu">
-                    <input id="hamburger-menu__toggle" type="checkbox" />
+                    <input id="hamburger-menu__toggle" type="checkbox">
                     <label class="hamburger-menu__btn" for="hamburger-menu__toggle">
                         <span></span>
                     </label>
@@ -495,7 +495,7 @@
                             </picture>
                             <div class="shop__card">
                                 <h3 class="shop__name">КУКЛА &laquo;ЗАЙЧИК&raquo;</h3>
-                                <p class="p-text shop__text">Интерьерная рукодельная кукла &laquo;Зайчик&raquo, созданию которой посвящена <a class="link shop__additional-link" href="#">весенняя серия постов</a> в блоге и несколько подкастов.</p>
+                                <p class="p-text shop__text">Интерьерная рукодельная кукла &laquo;Зайчик&raquo;, созданию которой посвящена <a class="link shop__additional-link" href="#">весенняя серия постов</a> в блоге и несколько подкастов.</p>
                                 <div class="shop__price-container">
                                     <span class="shop__price">3500 &#8381;</span>
                                 </div>
@@ -555,9 +555,9 @@
                     </a>
                 </li>
             </ul>
-            <section class="copyright">
+            <div class="copyright">
                 <span class="copyright__phrase">Copyright &#169; 2009–2019 City Blog LLC.</span>
-            </section>
+            </div>
         </footer>
     </div>
 </body>
