fix: Cleanup and verification HTML and CSS and naming banner toggle class ._hidden

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="page">
-    <input class="banner__toggle" type="checkbox" id="banner">
+    <input class="_hidden" type="checkbox" id="banner">
 
     <div class="banner-section">
         <label class="banner__background-close" for="banner"></label>
