fix: Fixing tags name in strikethrough costs

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                             <h3 class="shop__name">Подушки на диван</h3>
                             <p class="p-text shop__text">Набор из двух подушек с модными принтами. Видео о создании <a class="link shop__additional-link" href="#">здесь</a>.</p>
                             <div class="shop__price-container">
-                                <span class="shop__old-price">1000 &#8381;</span>
+                                <span class="shop__old-price"><s>1000 &#8381;</s></span>
                                 <span class="shop__price">800 &#8381;</span>
                             </div>
                             <a class="link button-link shop__link" href="#">В магазин</a>
@@ -542,7 +542,7 @@
                                 <h3 class="shop__name">Шестиугольная рамка</h3>
                             <p class="p-text shop__text">Необычная рамка для украшения дома из видео <a class="link shop__additional-link" href="#">&laquo;Как сделать рамку из подручных средств за 30 минут&raquo;</a></p>
                             <div class="shop__price-container">
-                                <span class="shop__old-price">500 &#8381;</span>
+                                <span class="shop__old-price"><s>500 &#8381;</s></span>
                                 <span class="shop__price">400 &#8381;</span>
                             </div>
                             <a class="link button-link shop__link" href="#">В магазин</a>
