fix: Fixing adding width and height to img in index.html and correcting resizing items in trends in a wide screen

--- a/index.html
+++ b/index.html
@@ -487,13 +487,13 @@
                         <picture class="shop__image">
                             <source
                                     media="(min-width: 1200px)"
-                                    srcset="images/shop-item-desk1.jpg">
+                                    srcset="images/shop-item-desk1.jpg" width="300" height="204">
                             <source
                                     media="(min-width: 641px) and (max-width: 1199px)"
-                                    srcset="images/shop-item-tablet1.jpg">
+                                    srcset="images/shop-item-tablet1.jpg" width="292" height="227">
                             <img class="shop__image"
                                     alt="Подушка на диване"
-                                    src="images/shop-item-mobile1.jpg">
+                                    src="images/shop-item-mobile1.jpg" width="285" height="285">
                         </picture>
                         <div class="shop__card sk__1">
                             <h3 class="shop__name">Подушки на диван</h3>
@@ -509,13 +509,13 @@
                         <picture class="shop__image">
                             <source
                                     media="(min-width: 1200px)"
-                                    srcset="images/shop-item-desk2.jpg">
+                                    srcset="images/shop-item-desk2.jpg" width="300" height="204">
                             <source
                                     media="(min-width: 641px) and (max-width: 1199px)"
-                                    srcset="images/shop-item-tablet2.jpg">
+                                    srcset="images/shop-item-tablet2.jpg" width="292" height="227">
                             <img class="shop__image"
                                     src="images/shop-item-mobile2.jpg"
-                                    alt="Кукла &laquo;Зайчик&raquo;" style="width: auto;">
+                                    alt="Кукла &laquo;Зайчик&raquo;" width="285" height="285">
                         </picture>
                         <div class="shop__card">
                             <h3 class="shop__name">Кукла &laquo;Зайчик&raquo;</h3>
@@ -530,12 +530,12 @@
                         <picture class="shop__image">
                             <source
                                     media="(min-width: 1200px)"
-                                    srcset="images/shop-item-desk3.jpg">
+                                    srcset="images/shop-item-desk3.jpg" width="300" height="204">
                             <source
                                     media="(min-width: 641px) and (max-width: 1199px)"
-                                    srcset="images/shop-item-tablet3.jpg">
+                                    srcset="images/shop-item-tablet3.jpg" width="292" height="227">
                             <img class="shop__image"
-                                    src="images/shop-item-mobile3.jpg"
+                                    src="images/shop-item-mobile3.jpg" width="285" height="285"
                                     alt="Шестиугольная рамка с вазой">
                         </picture>
                         <div class="shop__card">
